# jsontreeview

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
docs/: doc.md
src/: Main.qml  demo_data.json  jsonmodel.cpp  jsonmodel.h  main.cpp  treeitem.cpp  treemodel.cpp  treemodel.h
